Widens the text pane just a tad, to prevent wrapping in the header.

--- a/static/src/stylesheets/branding.less
+++ b/static/src/stylesheets/branding.less
@@ -2,6 +2,9 @@
 
 #branding {
 
+  // Force unbroken lines.
+  white-space: nowrap;
+
   .dark-panel();
   .border-radius(2px);
   .flex-shrink(0);
@@ -16,8 +19,8 @@
 
   p {
     margin: 0;
-    font-weight: 300;
     font-size: 14px;
+    font-weight: 300;
   }
 
   span.count {
