--- a/static/src/stylesheets/texts.less
+++ b/static/src/stylesheets/texts.less
@@ -35,6 +35,7 @@
 
   // Loading icons.
   i.spinner {
+    display: table;
     font-size: 7em;
     color: @color-hl;
   }
