--- a/static/src/stylesheets/vars.less
+++ b/static/src/stylesheets/vars.less
@@ -2,7 +2,7 @@
 
 @color-bg: #002F59;
 @color-hl: #ffc600;
-@px-search-width: 300px;
+@px-search-width: 320px;
 @px-gutter: 20px;
 
 // Fonts:
